tdf#164905 tdf#164499 sw smart justify: fix overlapping text in ToC

Unnecessary calculation with the width of the glue portions resulted
bad ToC, i.e. text lines with tabulators got overlapping text.

Regression from commit 857dd6000c877f2c6d8bb73806a8557fa0baea73
"tdf#161810 sw smart justify: fix overhanging lines containing tabs".

Revert only the calculation, but not the unit test, which is still
correct, according to commit ed7fbfce0b434f7d2a5542483d2838af51958e34
"tdf#164499 sw smart justify: disable in tabulated lines to fix ToC".

Change-Id: I3fe6d0d56ea8593ddee23d3c4063024762b65bab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182433
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>